--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,6 +22,7 @@
             <h3 id="Descreption">Pershkrimi</h3>
             <p>Fotografia e realizuar nga Arton Gashi</p>
             <p>Kjo foto eshte realizuar ne <a href="https://www1.nyc.gov/">New York City</a> ne <a href="http://www.centralparknyc.org/">Central Park</a> me 10 Tetor 2018</p>
+            <p>Kjo foto eshte bere me kamer te telefonit</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
