--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,6 +23,8 @@
             <p>Fotografia e realizuar nga Arton Gashi</p>
             <p>Kjo foto eshte realizuar ne <a href="https://www1.nyc.gov/">New York City</a> ne <a href="http://www.centralparknyc.org/">Central Park</a> me 10 Tetor 2018</p>
             <p>Kjo foto eshte bere me kamer te telefonit</p>
+            <p>Me telefon</p>
+            <p>Galaxy a3 2017</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
