--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,6 +25,7 @@
             <p>Kjo foto eshte bere me kamer te telefonit</p>
             <p>Me telefon</p>
             <p>Galaxy a3 2017</p>
+            <p>Mirsad Dibrani</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
