--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,6 +26,7 @@
             <p>Me telefon</p>
             <p>Galaxy a3 2017</p>
             <p>Mirsad Dibrani</p>
+            <p>Prishtina</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
