--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,6 +27,7 @@
             <p>Galaxy a3 2017</p>
             <p>Mirsad Dibrani</p>
             <p>Prishtina</p>
+             <p>Kosova</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
