kam shtuar RKosova

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,6 +28,7 @@
             <p>Mirsad Dibrani</p>
             <p>Prishtina</p>
              <p>Kosova</p>
+             <p>Republika e Koosoves</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
