--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,6 +29,7 @@
             <p>Prishtina</p>
              <p>Kosova</p>
              <p>Republika e Koosoves</p>
+             <p>Prishtina - Kryeqyteti i Kosoves</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
