--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,6 +31,7 @@
              <p>Republika e Koosoves</p>
              <p>Prishtina - Kryeqyteti i Kosoves</p>
              <p>FIEK</p>
+             <p>Universiteti i Prishtines</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
