--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,6 +33,7 @@
              <p>FIEK</p>
              <p>Universiteti i Prishtines</p>
              <p>MeritonKyqyku</p>
+             <p>mirsad</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
