--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,6 +34,7 @@
              <p>Universiteti i Prishtines</p>
              <p>MeritonKyqyku</p>
              <p>mirsad</p>
+             <p>Testi nr 2</p>
             <figure>
                 <a href="Images/central-park.jpg">
                     <img src="Images/central-park.jpg" alt="Nuk mund te shihet fotografia">
